--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     },
     "devDependencies": {},
     "scripts": {
-        "install": "./package/install.sh",
+        "setup": "./package/setup.sh",
         "build": "./package/build.sh",
         "serve": "./package/serve.sh",
         "test": "echo \"Error: no test specified\" && exit 1"
